fix: markdown first para spacing

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/rich-text-editor/RichTextEditorPreviewer.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/rich-text-editor/RichTextEditorPreviewer.less
@@ -143,6 +143,9 @@
       color: @text-color;
       word-break: break-word;
       line-height: 20px;
+      &:first-child {
+        margin-top: 0px;
+      }
       &:last-child {
         margin-bottom: 0px;
       }
